test/invalid-semantics/fc51601_repeated_key_record/repeated_key.mag
--- Author: fc51601, José Sousa

const r : {x: Int, x: Int, x: Int} = {x = 0, x = 1, x = 2}
fun main (_) : Unit -> Unit = print(r)